# rlso

./: .gitignore  README.md  meson.build  meson.options  run-tests.sh
docs/: index.html  index.md  so-cmp.html  so-core.html  so-core.md  template.html
docs/capi/: so.html  so_is_stack.html
examples/: meson.build  so.c  so_input.c  so_l.c
experiments/: color.c  eye-cancer.c  one-line.c  run-debug.sh  run-optimized.sh  test-basic.c  test-file.c  test-file.py
man/: meson.build  so.3  so.html  so_l.3  so_l.html
md/: so-cmp.md  so-core.md  so-input.md  so-print.md  so-trim.md
src/: endian.h  main.c  meson.build  rlso.h  so-align.c  so-align.h  so-as.c  so-as.h  so-cmp.c  so-cmp.h  so-color.c  so-core.c  so-core.h  so-count.c  so-count.h  so-env.c  so-env.h  so-file.c  so-file.h  so-find.c  so-find.h  so-fx.c  so-fx.h  so-heap.c  so-heap.h  so-input.c  so-path.c  so-path.h  so-print.c  so-splice.c  so-splice.h  so-split.c  so-split.h  so-trim.c  so-trim.h  so-uc.c  so-uc.h  so.c  so.h  test-cmp.c  (+4 more)
src/rlso/: so-align.c  so-as.c  so-as.h  so-base64.c  so-base64.h  so-cmp-attr.h  so-cmp.c  so-cmp.h  so-color.c  so-color.h  so-core.c  so-core.h  so-count.c  so-count.h  so-env.c  so-env.h  so-file.c  so-file.h  so-filesig.c  so-filesig.h  so-find.c  so-find.h  so-fx.c  so-fx.h  so-hash.c  so-hash.h  so-heap.c  so-heap.h  so-input.c  so-input.h  so-path.c  so-path.h  so-print.c  so-print.h  so-splice.c  so-splice.h  so-split.c  so-switch.c  so-switch.h  so-trim.c  (+6 more)
tests/: as-size.c  base64.c  cmp.c  cmp.list  count.c  endian.c  env.c  extend.c  file.c  filesig.c  find.c  fmt-fgbgx.c  fmt.c  input.c  len-0.2.c  len-0.c  len-1000.c  len-a.c  len-nfx.c  meson.build  path.2.c  path.3.c  path.4.c  path.c  push-len.c  realpath.c  run-debug.sh  run-optimized.sh  run-ppc64.sh  so-basic.c  splice.2.c  splice.3.c  splice.c  split-ch.c  split.c  switch.c  test-basic.c  test-cmp.c  test-file.c  test-find-f.c  (+14 more)
